--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ numpy==1.24.3
 # Raspberry Pi camera support
 picamera2==0.3.12
 
+# Timezone support
+pytz==2023.3
+
 # Additional utilities
 configparser==5.3.0
 
