--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Raspberry Pi 5 Vision Detection System Requirements
+# Updated for parts defect detection with CSV data logging
 
 # Core computer vision libraries
 opencv-python==4.8.1.78
@@ -10,15 +11,18 @@ picamera2==0.3.12
 # Timezone support
 pytz==2023.3
 
-# Additional utilities
+# Configuration management
 configparser==5.3.0
 
-# Optional: Machine learning libraries (for advanced detection)
-# tensorflow==2.13.0  # Uncomment if using TensorFlow models
+# CSV handling (built-in, but listed for clarity)
+# csv - Built-in Python module
+
+# Optional: Machine learning libraries (for advanced YOLO detection)
+# tensorflow==2.13.0  # Uncomment if using custom TensorFlow models
 # torch==2.0.1        # Uncomment if using PyTorch models
 # torchvision==0.15.2 # Uncomment if using PyTorch vision
 
-# Optional: Web interface dependencies (if needed)
+# Optional: Web interface dependencies (if needed for remote monitoring)
 # flask==2.3.3        # Uncomment for web interface
 # socketio==5.8.0     # Uncomment for real-time updates
 
